# multi-stream-synchronizer

./: ALGORITHM.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
examples/: simple.rs
src/: buffer.rs  common.rs  config.rs  lib.rs  main.rs  message.rs  staleness.rs  state.rs  sync.rs  types.rs
src/sync/: buffer.rs  state.rs
tests/: advanced_edge_case_tests.rs  buffer_and_error_tests.rs  common.rs  realistic_timing_tests.rs  staleness_basic_tests.rs  staleness_integration_tests.rs  staleness_tokio_tests.rs  stress_tests.rs  three_stream_tests.rs  timeout_tests.rs  two_stream_tests.rs
