[package]
name = "multi-stream-synchronizer"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.28"
itertools = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
indexmap = { version = "2.0.2", features = ["serde"] }
humantime-serde = "1.1.1"
collected = "0.4.0"
flume = "0.11.0"
tracing = "0.1.37"
tokio = { version = "1.33.0", features = ["sync"] }
eyre = "0.6.12"

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
