[package]
name = "multi-stream-synchronizer"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "A Rust library for synchronizing timestamped messages from multiple data streams using time-window based grouping"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jerry73204/multi-stream-synchronizer"
repository = "https://github.com/jerry73204/multi-stream-synchronizer"
documentation = "https://docs.rs/multi-stream-synchronizer"
keywords = ["synchronization", "streams", "real-time", "time-window", "sensor-fusion"]
categories = ["algorithms", "asynchronous", "data-structures"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "ALGORITHM.md",
    "CONTRIBUTING.md",
    "license/LICENSE-MIT",
    "license/LICENSE-APACHE"
]

[features]
default = []
tokio = []

[dependencies]
futures = "0.3.28"
itertools = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
indexmap = { version = "2.0.2", features = ["serde"] }
humantime-serde = "1.1.1"
collected = "0.4.0"
flume = "0.11.0"
tracing = "0.1.37"
tokio = { version = "1.33.0", features = ["sync", "time"] }
eyre = "0.6.12"

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "staleness_tokio_tests"
required-features = ["tokio"]
